--- a/01.html
+++ b/01.html
@@ -2,9 +2,192 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>第一个作业</title>
 	</head>
 	<body>
-		今天学会了git
+		<table cellspacing="0" border="1" align="center">
+			<!--第一行-->
+			<tr align="center">
+				<td>工单号</td>
+				<td width="100"></td>
+				<td width="60">车牌号</td>
+				<td colspan="2" width="100"></td>
+				<!--<td>5</td>-->
+				<td>车型</td>
+				<td></td>
+				<td>技师</td>
+				<td></td>
+				<td width="70">检修时间</td>
+				<td width="100"></td>
+			</tr>
+			<!--第二行-->
+			<tr align="center">
+				<td width="50">序号</td>
+				<td colspan="3" width="230">维修项目以及更换配件</td>
+				<!--<td>3</td>
+				<td>4</td>-->
+				<td width="50">单价</td>
+				<td width="60">数量</td>
+				<td width="50">小计</td>
+				<td width="50">工时费</td>
+				<td width="60">合计</td>
+				<td colspan="2" width="120">故障原因</td>
+				<!--<td>11</td>-->
+			</tr>
+			<!--第三行-->
+			<tr align="center">
+				<td>1</td>
+				<td colspan="3"></td>
+				<!--<td>3</td>
+				<td>4</td>-->
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td colspan="2"></td>
+				<!--<td>11</td>-->
+			</tr>
+			<!--第四行-->
+			<tr align="center">
+				<td>2</td>
+				<td colspan="3"></td>
+				<!--<td>3</td>
+				<td>4</td>-->
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td colspan="2"></td>
+				<!--<td>11</td>-->
+			</tr>
+			<!--第五行-->
+			<tr align="center">
+				<td>3</td>
+				<td colspan="3"></td>
+				<!--<td>3</td>
+				<td>4</td>-->
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td colspan="2"></td>
+				<!--<td>11</td>-->
+			</tr>
+			<!--第六行-->
+			<tr align="center">
+				<td>4</td>
+				<td colspan="3"></td>
+				<!--<td>3</td>
+				<td>4</td>-->
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td colspan="2"></td>
+				<!--<td>11</td>-->
+			</tr>
+			<!--第七行-->
+			<tr align="center">
+				<td>5</td>
+				<td colspan="3"></td>
+				<!--<td>3</td>
+				<td>4</td>-->
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td colspan="2"></td>
+				<!--<td>11</td>-->
+			</tr>
+			<!--第八行-->
+			<tr align="center">
+				<td>6</td>
+				<td colspan="3"></td>
+				<!--<td>3</td>
+				<td>4</td>-->
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td colspan="2"></td>
+				<!--<td>11</td>-->
+			</tr>
+			<!--第九行-->
+			<tr align="center">
+				<td>7</td>
+				<td colspan="3"></td>
+				<!--<td>3</td>
+				<td>4</td>-->
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td colspan="2"></td>
+				<!--<td>11</td>-->
+			</tr>
+			<!--第十行-->
+			<tr align="center">
+				<td>8</td>
+				<td colspan="3"></td>
+				<!--<td>3</td>
+				<td>4</td>-->
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td colspan="2"></td>
+				<!--<td>11</td>-->
+			</tr>
+			<!--第十一行-->
+			<tr align="center">
+				<td>9</td>
+				<td colspan="3"></td>
+				<!--<td>3</td>
+				<td>4</td>-->
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td colspan="2"></td>
+				<!--<td>11</td>-->
+			</tr>
+			<!--第十二行-->
+			<tr align="center">
+				<td>10</td>
+				<td colspan="3"></td>
+				<!--<td>3</td>
+				<td>4</td>-->
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td colspan="2"></td>
+				<!--<td>11</td>-->
+			</tr>
+			<!--第十三行-->
+			<tr>
+				<td colspan="4">备件费用小计：</td>
+				<!--<td>2</td>
+				<td>3</td>
+				<td>4</td>-->
+				<td colspan="5">工时费小计：</td>
+				<!--<td>6</td>
+				<td>7</td>
+				<td>8</td>
+				<td>9</td>-->
+				<td colspan="2">合计：</td>
+				<!--<td>11</td>-->
+			</tr>
+		</table>
 	</body>
 </html>
