--- a/yyhomework2.html
+++ b/yyhomework2.html
@@ -8,85 +8,85 @@
 				width: 70px;
 				height: 75px;
 
-				background: url(img/精灵图习题.png) no-repeat -360px -170px;
+				background: url(img/精灵图习题.PNG) no-repeat -360px -170px;
 			}
 
 			.box2 {
 				width: 70px;
 				height: 75px;
-				background: url(img/精灵图习题.png) no-repeat -286px -13px;
+				background: url(img/精灵图习题.PNG) no-repeat -286px -13px;
 			}
 
 			.box3 {
 				width: 70px;
 				height: 75px;
-				background: url(img/精灵图习题.png) no-repeat -272px -90px;
+				background: url(img/精灵图习题.PNG) no-repeat -272px -90px;
 			}
 
 			.box4 {
 				width: 45px;
 				height: 70px;
-				background: url(img/精灵图习题.png) no-repeat -58px -317px;
+				background: url(img/精灵图习题.PNG) no-repeat -58px -317px;
 			}
 
 			.box5 {
 				width: 45px;
 				height: 70px;
-				background: url(img/精灵图习题.png) no-repeat -385px -317px;
+				background: url(img/精灵图习题.PNG) no-repeat -385px -317px;
 			}
 
 			.box6 {
 				width: 45px;
 				height: 70px;
-				background: url(img/精灵图习题.png) no-repeat -385px -317px;
+				background: url(img/精灵图习题.PNG) no-repeat -385px -317px;
 			}
 
 			.box7 {
 				width: 45px;
 				height: 75px;
-				background: url(img/精灵图习题.png) no-repeat -245px -317px;
+				background: url(img/精灵图习题.PNG) no-repeat -245px -317px;
 			}
 
 			.box8 {
 				width: 45px;
 				height: 75px;
-				background: url(img/精灵图习题.png) no-repeat -58px -317px;
+				background: url(img/精灵图习题.PNG) no-repeat -58px -317px;
 			}
 
 			.box9 {
 				width: 45px;
 				height: 75px;
-				background: url(img/精灵图习题.png) no-repeat -385px -317px;
+				background: url(img/精灵图习题.PNG) no-repeat -385px -317px;
 			}
 
 			.box10 {
 				width: 45px;
 				height: 75px;
-				background: url(img/精灵图习题.png) no-repeat -290px -317px;
+				background: url(img/精灵图习题.PNG) no-repeat -290px -317px;
 			}
 
 			.box11 {
 				width: 45px;
 				height: 75px;
-				background: url(img/精灵图习题.png) no-repeat -13px -317px;
+				background: url(img/精灵图习题.PNG) no-repeat -13px -317px;
 			}
 
 			.box12 {
 				width: 45px;
 				height: 75px;
-				background: url(img/精灵图习题.png) no-repeat -290px -317px;
+				background: url(img/精灵图习题.PNG) no-repeat -290px -317px;
 			}
 
 			.box13 {
 				width: 45px;
 				height: 75px;
-				background: url(img/精灵图习题.png) no-repeat -95px -317px;
+				background: url(img/精灵图习题.PNG) no-repeat -95px -317px;
 			}
 
 			.box14 {
 				width: 45px;
 				height: 75px;
-				background: url(img/精灵图习题.png) no-repeat -342px -317px;
+				background: url(img/精灵图习题.PNG) no-repeat -342px -317px;
 			}
 		</style>
 	</head>
